# mid-render

./: .gitignore  CMakeLists.txt  README.md
LICENSES/: THIRD_PARTY_NOTICES.txt
docs/: job-templates.md
installer/: midrender_installer.iss
mr-agent/: Cargo.toml
mr-agent/src/: executor.rs  main.rs
mr-agent/src/ipc/: windows.rs
resources/: midrender.rc
resources/icons/: MR.ai  Mlogo.ai
resources/plugins/afterEffects/: MidRender.jsx
resources/plugins/blender/: MidRender.py
resources/plugins/cinema4d/: MidRender.py
resources/templates/: after-effects-union.json  blender-5.0-union.json  cinema4d-2026-all-options.json
resources/templates/backups/: blender-5.0-all-options.json
resources/templates/plugins/: after-effects-plugin.json  blender-5.0-plugin.json  cinema4d-2026-plugin.json
src/core/: config.h  http_server.cpp  http_server.h  ipc_server.cpp  ipc_server.h  job_types.h  monitor_log.cpp  monitor_log.h  net_utils.cpp  net_utils.h  node_identity.cpp  node_identity.h  peer_info.h  platform.cpp  platform.h  single_instance.cpp  single_instance.h  system_tray.cpp  system_tray.h  udp_notify.cpp  udp_notify.h
src/monitor/: agent_supervisor.cpp  agent_supervisor.h  database_manager.cpp  database_manager.h  dispatch_manager.cpp  dispatch_manager.h  farm_init.cpp  farm_init.h  main.cpp  monitor_app.cpp  monitor_app.h  node_failure_tracker.h  peer_manager.cpp  peer_manager.h  render_coordinator.cpp  render_coordinator.h  submission_watcher.cpp  submission_watcher.h  template_manager.cpp  template_manager.h
src/monitor/ui/: dashboard.cpp  dashboard.h  farm_cleanup_dialog.cpp  farm_cleanup_dialog.h  job_detail_panel.cpp  job_detail_panel.h  job_list_panel.cpp  job_list_panel.h  log_panel.cpp  log_panel.h  node_panel.cpp  node_panel.h  settings_panel.cpp  settings_panel.h  style.cpp  style.h
