[package]
name = "mr-agent"
version = "0.2.2"
edition = "2021"
description = "MidRender headless render agent"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
regex = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Foundation",
]
